--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".Views.HomeActivity">
 
+
+    <ProgressBar
+        android:id="@+id/mProgressBarLoad"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateBehavior="cycle"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:background="@drawable/round_corner_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/map" />
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon_map" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/round_corner_white"
+        android:onClick="afegirDes"
+        android:text="Veure al mapa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/shadow_layer" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-        <ProgressBar
-            android:id="@+id/mProgressBarLoad"
-            style="?android:attr/progressBarStyleHorizontal"
+        <TextView
+            android:id="@+id/data_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:indeterminateBehavior="cycle"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:onClick="afegirDes"
-            android:text="Buscar"
-            tools:layout_editor_absoluteX="159dp"
-            tools:layout_editor_absoluteY="1dp" />
+            android:padding="10dp"
+            android:text="Username"
+            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_cards"
@@ -39,7 +78,6 @@
 
     </LinearLayout>
 
-
     <FrameLayout
         android:id="@+id/shadow_layer"
         android:layout_width="match_parent"
@@ -47,7 +85,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:background="#725C5C5C"
-        android:visibility="invisible" />
+        android:visibility="gone" />
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_new"
@@ -109,6 +149,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/button_new_obra"
         app:layout_constraintEnd_toStartOf="@+id/button_new_obra"
         app:layout_constraintTop_toTopOf="@+id/button_new_obra" />
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_new_visit"
