--- a/app/src/main/res/layout/cardmap_item.xml
+++ b/app/src/main/res/layout/cardmap_item.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="VEURE"
+                android:background="@color/blau"
                 android:paddingRight="20dp"
                 android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                 android:layout_marginBottom="-5dp"
