--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:orientation="vertical"
-    android:padding="5dp">
+    android:layout_margin="5dp"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
+        android:id="@+id/iv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:minHeight="200dp"
+        android:scaleType="fitCenter"/>
+
+    <FrameLayout
+        android:id="@+id/border"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:minHeight="200dp"
+        android:scaleType="fitCenter"
+        android:background="@drawable/borderimageview"
+        android:visibility="gone"
+        >
+
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:scaleType="centerCrop" />
-</LinearLayout>
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        android:visibility="gone" />
+
+</FrameLayout>
+
