Add lot of changes in general 2

--- a/app/src/main/res/drawable/icon_map.xml
+++ b/app/src/main/res/drawable/icon_map.xml
@@ -4,7 +4,7 @@
 
     <item
         android:gravity="center"
-        android:drawable="@drawable/circle"
+        android:drawable="@drawable/circle_green"
         />
 
     <item
