--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="location">#8BC34A</color>
     <color name="colorPrimaryPix">#09144E</color>
     <color name="colorPrimaryLightPix">#3F51B5</color>
+    <color name="shimer">#A2FFFFFF</color>
 </resources>
