--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,10 +70,12 @@
             android:text="Username"
             android:textSize="24sp" />
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_cards"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
 
 
     </LinearLayout>
