--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:indeterminateBehavior="cycle"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +48,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/round_corner_white"
         android:onClick="afegirDes"
-        android:text="Veure al mapa"
+        android:text="@string/view_in_map"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Username"
+            android:text="@string/username"
             android:textSize="24sp" />
 
 
@@ -113,7 +112,7 @@
         android:layout_margin="20dp"
         android:background="@drawable/round_corner_white"
         android:padding="8dp"
-        android:text="Nova visita"
+        android:text="@string/new_visit"
         android:textSize="18dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/button_new_visit"
@@ -144,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:visibility="invisible"
-        android:text="Nova obra"
+        android:text="@string/new_obra"
         android:textSize="18dp"
         android:padding="8dp"
         android:background="@drawable/round_corner_white"
