--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -36,7 +36,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:text="Titol d'actuació"
+                android:text="@string/title_obra_item"
                 android:textSize="20dp" />
 
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:drawablePadding="2dp"
-                android:text="Adreça"
+                android:text="@string/adress_obra_item"
                 android:textColor="@color/textos_sec" />
 
             <ImageView
@@ -72,7 +72,7 @@
                 android:gravity="center"
                 android:layout_marginBottom="0dp"
                 android:layout_toEndOf="@+id/imageView3"
-                android:text="Ramon" />
+                android:text="@string/author_obra_item" />
 
             <TextView
                 android:id="@+id/referencia"
@@ -87,7 +87,7 @@
                 android:gravity="center_vertical|right"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:text="REF2020"
+                android:text="@string/ref_obra_item"
                 android:textSize="12dp" />
 
         </RelativeLayout>
