--- a/app/src/main/res/layout/fragment_docs.xml
+++ b/app/src/main/res/layout/fragment_docs.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
-                    android:text="DOCUMENTS"
+                    android:text="@string/title_docs"
                     android:textSize="20dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
