--- a/app/src/main/res/layout/skeleton_visit_item.xml
+++ b/app/src/main/res/layout/skeleton_visit_item.xml
@@ -3,27 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:elevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/gris">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:focusable="true"
-                android:checkable="true">
+                android:layout_height="match_parent">
                 <!-- Media -->
                 <ImageView
                     android:id="@+id/image"
@@ -34,11 +32,11 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/default_visit" />
+                    app:srcCompat="@drawable/skeleton" />
 
                 <TextView
                     android:id="@+id/data"
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/ombra"
                     android:layout_alignParentEnd="true"
@@ -48,8 +46,6 @@
                     android:elevation="2dp"
                     android:gravity="center_vertical|right"
                     android:padding="6dp"
-                    android:text="@string/date_visit_item"
-                    android:textSize="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,40 +57,71 @@
                     app:layout_constraintBottom_toBottomOf="parent" />
 
 
-                <ImageView
+                <TextView
                     android:id="@+id/user"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:layout_alignTop="@+id/ombra"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottoop="@+id/ombra"
+                    android:layout_alignTm="true"
                     android:layout_margin="15dp"
+                    android:background="@drawable/rounded_corner_grey"
                     android:elevation="2dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/barra"
-                    app:srcCompat="@mipmap/ic_ramon" />
+                    app:layout_constraintTop_toTopOf="@+id/barra" />
 
                 <TextView
                     android:id="@+id/titol"
-                    android:layout_width="wrap_content"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:shadowColor="@color/gris"
-                    android:text="@string/title_visit_item"
+                    android:elevation="2dp"
+                    android:background="@drawable/rounded_corner_grey"
                     android:textAppearance="?attr/textAppearanceHeadline6"
-                    android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="@+id/user"
                     app:layout_constraintStart_toEndOf="@+id/user"
                     app:layout_constraintTop_toTopOf="@+id/user" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/descrip"
-                android:padding="20dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
-                android:text="@string/description_visit_item"/>
+                android:layout_height="match_parent">
+
+                <FrameLayout
+                    android:id="@+id/frameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:background="@color/gris"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <FrameLayout
+                    android:id="@+id/frameLayout2"
+                    android:layout_width="330dp"
+                    android:layout_height="15dp"
+                    android:elevation="2dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/rounded_corner_grey"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout" />
+
+                <FrameLayout
+                    android:layout_width="260dp"
+                    android:layout_height="15dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:elevation="2dp"
+                    android:background="@drawable/rounded_corner_grey"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout"
+                    app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
