--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_cards"
+            android:layoutAnimation="@anim/layout_animation_from_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
